@@ -1,5 +1,5 @@
 # Build stage
-FROM maven:3-eclipse-temurin-21 AS builder
+FROM maven:3-eclipse-temurin-24 AS builder
 WORKDIR /opt/builder
 
 RUN git clone -b develop https://github.com/armand0w/DBSQLite && \
@@ -9,19 +9,19 @@ RUN git clone -b develop https://github.com/armand0w/DBSQLite && \
 
 COPY pom.xml ./TgBotAsus/
 COPY src ./TgBotAsus/src
-RUN mvn -f ./TgBotAsus/pom.xml clean compile package -DskipTests
+RUN mvn -f ./TgBotAsus/pom.xml clean package -DskipTests -e -B
 
 
 # Runtime stage
-FROM azul/zulu-openjdk-alpine:21-jre-headless-latest
+FROM azul/zulu-openjdk-alpine:24-jre-headless-latest
 LABEL maintainer="Armando Castillo" \
-      version="0.5.1" \
+      version="0.5.2" \
       description="Telegram Bot ASUS"
 
 ENV APP_USER=tgbot \
     APP_UID=1000 \
     APP_HOME=/opt/app \
-    JAVA_OPTS="-Xms64m -Xmx128m"
+    JAVA_OPTS="-Xms64m -Xmx192m"
 
 RUN addgroup -g $APP_UID $APP_USER && \
     adduser -D -u $APP_UID -G $APP_USER $APP_USER && \
@@ -39,4 +39,4 @@ HEALTHCHECK --interval=30s --timeout=3s --start-period=5s --retries=3 \
     CMD ps aux | grep java | grep TgBotAsus.jar || exit 1
 
 ENTRYPOINT ["sh", "-c"]
-CMD ["java $JAVA_OPTS -jar TgBotAsus.jar"]
+CMD ["java --enable-native-access=ALL-UNNAMED $JAVA_OPTS -jar TgBotAsus.jar"]
